--- a/Piaggio-API/Piaggio-API.csproj
+++ b/Piaggio-API/Piaggio-API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Piaggio-API</RootNamespace>
+    <RootNamespace>Piaggio_API</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
