add app setting-Abhishek

--- a/Piaggio-API/appsettings.json
+++ b/Piaggio-API/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "ICPLDatabase": "Server=103.165.118.37,1436;Initial Catalog=MuthootSecurities_DEV;Persist Security Info=False;User ID=VDAMS_READ_WRITE;Password=pze5:W3KqE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=0;"
+    "ICPLDatabase": "Server=103.165.118.37,1436;Initial Catalog=Piaggio_DEV;Persist Security Info=False;User ID=VDAMS_READ_WRITE;Password=pze5:W3KqE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=0;"
   },
   "AppSeettings": {
     "SMTPHost": "smtp.gmail.com",
@@ -24,7 +24,7 @@
     //"VFvypdVxgUI*",
     "ReportHost": "103.165.118.37",
     "AccountMailerEmail": "ABHISHEK.TRIPATHI@quantique.ai",
-    "Errormail": "usman@quantique.ai",
+    "Errormail": "ABHISHEK.TRIPATHI@quantique.ai",
     "MongodbName": "dbprod_ICICI"
   }
  
