Add Login Api-Abhishek

--- a/Piaggio-API/appsettings.json
+++ b/Piaggio-API/appsettings.json
@@ -13,8 +13,8 @@
   },
   "AppSeettings": {
     "SMTPHost": "smtp.gmail.com",
-    "SMTPSenderMailAddress": "quantique.noreply.mumbai@gmail.com",
-    "SMTPPassword": "uxnpdxcdsrrmaqwj",
+    "SMTPSenderMailAddress": "mj395841@gmail.com",
+    "SMTPPassword": "eoug fybk xpmk khrr",
     "SMTPPort": "25",
     "businessUrl": "http://localhost:59629/",
     "ReportUrl": "http://103.165.118.37/ReportServer_SQLEXPRESS",
